# porscheai

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
archiv/: readme.md
archiv/drivers/playground/: make_ref_trajectory.ipynb  simplecar.ipynb
archiv/src/: tb_logging.py
porscheai/: run_trained_model.py
porscheai/environment/: base_env.py  helpclasses.py
porscheai/environment/action_spaces/: __init__.py  one_for_brake_and_gear.py
porscheai/environment/configs/: __init__.py  abstract_classes.py  car_physics.py  general_configs.py  observation_space.py  target_trajectory.py
porscheai/environment/observation_spaces/: __init__.py  outlook_observation_space.py
porscheai/environment/rendering/: __init__.py  render_classes.py
porscheai/environment/wrapper_classes/: render_wrapper.py
porscheai/training/: callbacks.py  exp_manager.py  hyperparams_opt.py  train.py  utils.py
porscheai/training/hyperparams/: a2c.yml  her.yml  ppo.yml  sac.yml  td3.yml  tqc.yml  trpo.yml
porscheai/utils/: __init__.py  test_functions.py
scripts/: run_tests.sh
tests/: conftest.py  test_base_env_init.py
