[tool.poetry]
name = "porscheai"
version = "0.1.0"
description = "some rl fun with porsche ai"
authors = ["Andre Ferdinand <andre.ferdinand@uni-mannheim.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
gymnasium = "0.28.1"
scipy = "^1.11.1"
stable-baselines3 = "^2.0.0"
tensorboard = "^2.14.0"
strenum = "^0.4.15"
sb3-contrib = "^2.0.0"
pyyaml = "^6.0.1"
optuna = "^3.3.0"
pygame = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
pytest = "^7.4.0"
pylint = "^2.17.5"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
